[package]
name = "cargo-archive"
version = "0.1.0"
edition = "2021"
authors = ["Julien Leclercq"]
license = "MIT"
description = "Archive and unarchive heavy target directories in a tar.zstd file"
repository = "https://github.com/julien-leclercq/cargo-archive"

[[bin]]
name = "cargo-archive"
path = "src/archive.rs"

[[bin]]
name = "cargo-unarchive"
path = "src/unarchive.rs"

[dependencies]
cargo_metadata = "0.18.1"
tar = "0.4.40"
zstd = "0.13.1"
