[package]
name = "cargo-archive"
version = "0.1.0"
edition = "2021"
authors = ["Julien Leclercq"]
license = "MIT"
description = "Archive and unarchive heavy target directories in a tar.zstd file"
repository = "https://github.com/julien-leclercq/cargo-archive"

[dependencies]
cargo_metadata = "0.23.0"
clap = { version = "4.5.48", features = ["derive"] }
snafu = "0.8.9"
tar = "0.4.44"
zstd = "0.13.1"

[lints.clippy]
pedantic = { level = "warn" }

[[bin]]
name = "cargo-archive"

[[bin]]
name = "cargo-unarchive"

[[bin]]
name = "cargo-archive-all"

[[bin]]
name = "cargo-unarchive-check"

[[bin]]
name = "cargo-unarchive-clippy"
